# mintyadv

./: Cargo.toml  build.rs  build.sh
.github/workflows/: rust.yml
assets/maps/: L0A0.json  L0A1.json  L0A2.json  entities.tsx
src/: background.rs  controller.rs  data.rs  foreground.rs  lib.rs  utils.rs  vec2.rs
src/entity/: mod.rs  player.rs
src/state/: level.rs  mod.rs  title.rs
www/: index.html
