[package]
name = "mintyadv"
version = "0.1.0"
authors = ["x10A94 <hyperpone@gmail.com>"]
edition = "2018"

[features]
debug = []
editor = []

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
debug = true

[dependencies]

[build-dependencies]
image = "0.23"
lz4 = "1.23"
serde_json = "1.0"
chrono = "0.4"
